# wxIntelliFile

./: .gitignore  CMakeLists.txt  IntelliFile.rc  ViewTextFileDlg.cpp  ViewTextFileDlg.h
hlp/: IntelliFile.chm
res/: ribbon.mfcribbon-ms
